backend: ゲームの基本操作に関するAPIが一旦作成完了
